temp/objects/NCCI_Code__c.object
<CustomObject>
    <fields>
        <fullName>Experience_Modifier__c</fullName>
        <label>Experience Modifier</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Exposure_Base__c</fullName>
        <label>Exposure Base</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Exposure_Base</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>NCCI_Code__c</fullName>
        <label>NCCI Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NCCI_Description__c</fullName>
        <label>NCCI Description</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rate__c</fullName>
        <label>Rate</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>US_State_Codes</valueSetName>
        </valueSet>
    </fields>
    <label>Scheduled Rates</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>NCCI_Code__c</columns>
        <columns>NCCI_Description__c</columns>
        <columns>State__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>NCCI_Codes_with_rates</fullName>
        <columns>NCCI_Description__c</columns>
        <columns>NAME</columns>
        <columns>Exposure_Base__c</columns>
        <columns>Rate__c</columns>
        <columns>Experience_Modifier__c</columns>
        <columns>State__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Exposure_Base__c</field>
            <operation>equals</operation>
            <value>&quot;Per $1,000 gross sales (policy year)&quot;,Per $1000 in payroll,&quot;Per $1,000 clinical payroll&quot;,&quot;Per 1,000 square feet&quot;,Per patient,Per unit,Other Factor,Per professional,No. of Person Months</value>
        </filters>
        <filters>
            <field>Exposure_Base__c</field>
            <operation>equals</operation>
            <value>&quot;Per $1,000 gross sales (policy year)&quot;,Per $1000 in payroll,Per trip,Per Vehicle</value>
        </filters>
        <label>NCCI Codes with rates</label>
    </listViews>
    <listViews>
        <fullName>Texas_Codes</fullName>
        <columns>NAME</columns>
        <columns>NCCI_Code__c</columns>
        <columns>NCCI_Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NCCI_Description__c</field>
            <operation>contains</operation>
            <value>Texas</value>
        </filters>
        <label>Texas Codes</label>
    </listViews>
    <listViews>
        <fullName>Vehicle_Rating_Guide</fullName>
        <columns>NCCI_Code__c</columns>
        <columns>NAME</columns>
        <columns>Exposure_Base__c</columns>
        <columns>Rate__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Exposure_Base__c</field>
            <operation>equals</operation>
            <value>Other Factor,Per trip,Per Vehicle</value>
        </filters>
        <label>Vehicle Rating Guide</label>
    </listViews>
    <nameField>
        <label>NCCI Code Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Scheduled Rates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>